<?xml version="1.0" encoding="utf-8"?>
<!--
* Assignment    # Midterm
* File Name     # menu_da.xml
* Authors       # Vaijyant Tomar
-->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/actionHome"
        android:title="@string/actionHome"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/actionSortRating"
        android:title="@string/actionSortRating"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/actionSortPopularity"
        android:title="@string/actionSortPopularity"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/actionQuit"
        android:title="@string/actionQuit"
        app:showAsAction="collapseActionView" />
</menu>