<?xml version="1.0" encoding="utf-8"?>
<!--
* Assignment    # Midterm
* File Name     # activity_main.xml
* Authors       # Vaijyant Tomar
-->
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tableLayoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="20dp"
    tools:context="com.vaijyant.a800990636_midterm.MainActivity">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <TextView
            android:id="@+id/lblSearchMusic"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:labelFor="@+id/editMovie"
            android:text="@string/lblSearchMovies"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/editMovie"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btnSearch" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="2dp"
        android:paddingStart="20dp">

        <TextView
            android:id="@+id/lblFavorites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblResults"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textSize="18sp"
            android:textStyle="bold" />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="2dp"
        android:paddingStart="20dp">

        <ListView
            android:id="@+id/listViewSearchResult"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1" />
    </TableRow>
</TableLayout>
